[project]
name = "alzheimer"
version = "0.1.0"
description = "proj-alzheimer-research"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "autogluon>=1.4.0",
    "colorama>=0.4.6",
    "imblearn>=0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.42.2",
    "sweetviz>=2.3.1",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupyterlab",
    "ipywidgets",
    # "marimo>=0.13.11",
    "notebook",
    "rich",
    "nbstripout>=0.8.1",
]
